fixes pagination