@@ -2,21 +2,30 @@ package org.fiware.mintaka.rest;
 
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.HttpStatus;
+import io.micronaut.http.MutableHttpResponse;
 import io.micronaut.http.annotation.Controller;
-import io.micronaut.multitenancy.tenantresolver.TenantResolver;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.fiware.mintaka.context.LdContextCache;
 import org.fiware.mintaka.domain.ApiDomainMapper;
+import org.fiware.mintaka.domain.PaginationInformation;
 import org.fiware.mintaka.domain.query.geo.GeoQuery;
 import org.fiware.mintaka.domain.query.geo.Geometry;
-import org.fiware.mintaka.domain.query.temporal.TimeQuery;
 import org.fiware.mintaka.domain.query.ngsi.QueryParser;
+import org.fiware.mintaka.domain.query.ngsi.QueryTerm;
+import org.fiware.mintaka.domain.query.temporal.TimeQuery;
+import org.fiware.mintaka.domain.query.temporal.TimeRelation;
+import org.fiware.mintaka.domain.query.temporal.TimeStampType;
+import org.fiware.mintaka.exception.InvalidTimeRelationException;
+import org.fiware.mintaka.exception.PersistenceRetrievalException;
 import org.fiware.mintaka.persistence.LimitableResult;
 import org.fiware.mintaka.service.EntityTemporalService;
 import org.fiware.ngsi.api.TemporalRetrievalApi;
 import org.fiware.ngsi.model.EntityTemporalListVO;
 import org.fiware.ngsi.model.EntityTemporalVO;
+import org.fiware.ngsi.model.GeoPropertyVO;
+import org.fiware.ngsi.model.PropertyVO;
+import org.fiware.ngsi.model.RelationshipVO;
 import org.fiware.ngsi.model.TimerelVO;
 
 import javax.annotation.Nullable;
@@ -26,9 +35,14 @@ import javax.validation.constraints.Size;
 import java.net.URI;
 import java.net.URL;
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * Implementation of the NGSI-LD temporal retrieval api
@@ -39,11 +53,16 @@ import java.util.Optional;
 public class TemporalApiController implements TemporalRetrievalApi {
 
 	public static final List<String> WELL_KNOWN_ATTRIBUTES = List.of("location", "observationSpace", "operationSpace", "unitCode");
+
+	private static final Integer DEFAULT_LIMIT = 100;
+	private static final String CONTENT_RANGE_HEADER_KEY = "Content-Range";
 	private static final String DEFAULT_TIME_PROPERTY = "observedAt";
 	private static final String DEFAULT_GEO_PROPERTY = "location";
 	private static final String SYS_ATTRS_OPTION = "sysAttrs";
 	private static final String TEMPORAL_VALUES_OPTION = "temporalValues";
+	private static final String COUNT_OPTION = "count";
 	public static final String COMMA_SEPERATOR = ",";
+	public static final String TIMERELATION_ERROR_MSG_TEMPLATE = "The given timestamp type is not supported: %s";
 
 	private final EntityTemporalService entityTemporalService;
 	private final LdContextCache contextCache;
@@ -51,45 +70,104 @@ public class TemporalApiController implements TemporalRetrievalApi {
 	private final ApiDomainMapper apiDomainMapper;
 
 	@Override
-	public HttpResponse<EntityTemporalListVO> queryTemporalEntities(@Nullable String link, @Nullable URI id, @Nullable String idPattern, @Nullable @Size(min = 1) String type, @Nullable @Size(min = 1) String attrs, @Nullable @Size(min = 1) String q, @Nullable String georel, @Nullable String geometry, @Nullable String coordinates, @Nullable @Size(min = 1) String geoproperty, @Nullable TimerelVO timerel, @Nullable @Pattern(regexp = "^((\\d|[a-zA-Z]|_)+(:(\\d|[a-zA-Z]|_)+)?(#\\d+)?)$") @Size(min = 1) String timeproperty, @Nullable Instant time, @Nullable Instant endTime, @Nullable @Size(min = 1) String csf, @Nullable @Min(1) Integer limit, @Nullable String options, @Nullable @Min(1) Integer lastN) {
+	public HttpResponse<EntityTemporalListVO> queryTemporalEntities(
+			@Nullable String link,
+			@Nullable String id,
+			@Nullable String idPattern,
+			@Nullable @Size(min = 1) String type,
+			@Nullable @Size(min = 1) String attrs,
+			@Nullable @Size(min = 1) String q,
+			@Nullable String georel,
+			@Nullable String geometry,
+			@Nullable String coordinates,
+			@Nullable @Size(min = 1) String geoproperty,
+			@Nullable TimerelVO timerel,
+			@Nullable @Pattern(regexp = "^((\\d|[a-zA-Z]|_)+(:(\\d|[a-zA-Z]|_)+)?(#\\d+)?)$") @Size(min = 1) String timeproperty,
+			@Nullable Instant timeAt,
+			@Nullable Instant endTimeAt,
+			@Nullable @Size(min = 1) String csf,
+			Integer pageSize,
+			URI pageAnchor,
+			@Nullable String options,
+			@Nullable @Min(1) Integer lastN) {
 
 		List<URL> contextUrls = contextCache.getContextURLsFromLinkHeader(link);
 		String expandedGeoProperty = Optional.ofNullable(geoproperty)
 				.filter(property -> !WELL_KNOWN_ATTRIBUTES.contains(property))
 				.map(property -> contextCache.expandString(property, contextUrls))
 				.orElse(DEFAULT_GEO_PROPERTY);
-		TimeQuery timeQuery = new TimeQuery(apiDomainMapper.timeRelVoToTimeRelation(timerel), time, endTime, getTimeRelevantProperty(timeproperty));
+		TimeQuery timeQuery = new TimeQuery(apiDomainMapper.timeRelVoToTimeRelation(timerel), timeAt, endTimeAt, getTimeRelevantProperty(timeproperty));
+
+		Optional<List<String>> optionalIdList = Optional.ofNullable(id).map(this::getIdList);
+		Optional<String> optionalIdPattern = Optional.ofNullable(idPattern);
+		List<String> expandedTypes = getExpandedTypes(contextUrls, type);
+		Optional<QueryTerm> optionalQuery = Optional.ofNullable(q).map(queryString -> queryParser.toTerm(queryString, contextUrls));
+		Optional<GeoQuery> optionalGeoQuery = getGeometryQuery(georel, geometry, coordinates, expandedGeoProperty);
+
 
 		LimitableResult<List<EntityTemporalVO>> limitableResult = entityTemporalService.getEntitiesWithQuery(
-				Optional.ofNullable(idPattern),
+				optionalIdList,
+				optionalIdPattern,
 				getExpandedTypes(contextUrls, type),
 				getExpandedAttributes(contextUrls, attrs),
-				Optional.ofNullable(q).map(queryString -> queryParser.toTerm(queryString, contextUrls)),
-				getGeometryQuery(georel, geometry, coordinates, expandedGeoProperty),
+				optionalQuery,
+				optionalGeoQuery,
 				timeQuery,
 				lastN,
 				isSysAttrs(options),
-				isTemporalValuesOptionSet(options));
+				isTemporalValuesOptionSet(options),
+				pageSize,
+				Optional.ofNullable(pageAnchor).map(URI::toString));
 
 		List<EntityTemporalVO> entityTemporalVOS = limitableResult.getResult();
 		entityTemporalVOS.forEach(entityTemporalVO -> addContextToEntityTemporalVO(entityTemporalVO, contextUrls));
 
+		Optional<PaginationInformation> paginationInformation = Optional.empty();
+		if (entityTemporalVOS.size() == pageSize) {
+			paginationInformation = Optional.of(
+					entityTemporalService
+							.getPaginationInfo(optionalIdList, optionalIdPattern, expandedTypes, optionalQuery, optionalGeoQuery, timeQuery, pageSize, Optional.ofNullable(pageAnchor).map(URI::toString)));
+		}
+
 		EntityTemporalListVO entityTemporalListVO = new EntityTemporalListVO();
 		entityTemporalListVO.addAll(entityTemporalVOS);
-
+		MutableHttpResponse<EntityTemporalListVO> mutableHttpResponse;
 		if (limitableResult.isLimited()) {
-			// TODO: find limits.
-			return HttpResponse.status(HttpStatus.PARTIAL_CONTENT).body(entityTemporalListVO);
+			Range range = getRange(getTimestampListFromEntityTemporalList(entityTemporalVOS, timeQuery), timeQuery, lastN);
+			mutableHttpResponse = HttpResponse
+					.status(HttpStatus.PARTIAL_CONTENT)
+					.body(entityTemporalListVO)
+					.header(CONTENT_RANGE_HEADER_KEY, getContentRange(range, lastN));
 		} else {
-			return HttpResponse.ok(entityTemporalListVO);
+			mutableHttpResponse = HttpResponse.ok(entityTemporalListVO);
 		}
+		paginationInformation.ifPresent(pi -> {
+			mutableHttpResponse.header("Page-Size", String.valueOf(pi.getPageSize()));
+			pi.getNextPage().ifPresent(np -> mutableHttpResponse.header("Next-Page", np));
+			pi.getPreviousPage().ifPresent(pp -> mutableHttpResponse.header("Previous-Page", pp));
+		});
+
+		if (isCountOptionSet(options)) {
+			Number totalCount = entityTemporalService.countMatchingEntities(optionalIdList, optionalIdPattern, expandedTypes, optionalQuery, optionalGeoQuery, timeQuery);
+			mutableHttpResponse.header("NGSILD-Total-Count", totalCount.toString());
+		}
+		return mutableHttpResponse;
 	}
 
 	@Override
-	public HttpResponse<EntityTemporalVO> retrieveEntityTemporalById(URI entityId, @Nullable String link, @Nullable @Size(min = 1) String attrs, @Nullable String options, @Nullable TimerelVO timerel, @Nullable @Pattern(regexp = "^((\\d|[a-zA-Z]|_)+(:(\\d|[a-zA-Z]|_)+)?(#\\d+)?)$") @Size(min = 1) String timeproperty, @Nullable Instant time, @Nullable Instant endTime, @Nullable @Min(1) Integer lastN) {
+	public HttpResponse<EntityTemporalVO> retrieveEntityTemporalById(
+			URI entityId,
+			@Nullable String link,
+			@Nullable @Size(min = 1) String attrs,
+			@Nullable String options,
+			@Nullable TimerelVO timerel,
+			@Nullable @Pattern(regexp = "^((\\d|[a-zA-Z]|_)+(:(\\d|[a-zA-Z]|_)+)?(#\\d+)?)$") @Size(min = 1) String timeproperty,
+			@Nullable Instant timeAt,
+			@Nullable Instant endTimeAt,
+			@Nullable @Min(1) Integer lastN) {
 
 		List<URL> contextUrls = contextCache.getContextURLsFromLinkHeader(link);
-		TimeQuery timeQuery = new TimeQuery(apiDomainMapper.timeRelVoToTimeRelation(timerel), time, endTime, getTimeRelevantProperty(timeproperty));
+		TimeQuery timeQuery = new TimeQuery(apiDomainMapper.timeRelVoToTimeRelation(timerel), timeAt, endTimeAt, getTimeRelevantProperty(timeproperty));
 
 		Optional<LimitableResult<EntityTemporalVO>> optionalLimitableResult = entityTemporalService
 				.getNgsiEntitiesWithTimerel(entityId.toString(),
@@ -105,10 +183,154 @@ public class TemporalApiController implements TemporalRetrievalApi {
 
 		LimitableResult<EntityTemporalVO> limitableResult = optionalLimitableResult.get();
 		if (limitableResult.isLimited()) {
-			// TODO: find limits.
-			return HttpResponse.status(HttpStatus.PARTIAL_CONTENT).body(limitableResult.getResult());
+			Range range = getRange(getTimestampListFromEntityTemporal(limitableResult.getResult(), timeQuery), timeQuery, lastN);
+			return HttpResponse
+					.status(HttpStatus.PARTIAL_CONTENT)
+					.body(addContextToEntityTemporalVO(limitableResult.getResult(), contextUrls))
+					.header(CONTENT_RANGE_HEADER_KEY, getContentRange(range, lastN));
 		} else {
 			return HttpResponse.ok(addContextToEntityTemporalVO(limitableResult.getResult(), contextUrls));
+		}
+	}
+
+	private List<String> getIdList(String id) {
+		return Arrays.asList(id.split(","));
+	}
+
+	private String getContentRange(Range range, Integer lastN) {
+		String size = "*";
+		if (lastN != null && lastN > 0) {
+			size = lastN.toString();
+		}
+		return String.format("date-time %s-%s/%s", range.getStart(), range.getEnd(), size);
+	}
+
+	private List<Instant> getTimestampListFromEntityTemporalList(List<EntityTemporalVO> entityTemporalVOS, TimeQuery timeQuery) {
+		return entityTemporalVOS
+				.stream()
+				.flatMap(entityTemporalVO -> getTimestampListFromEntityTemporal(entityTemporalVO, timeQuery).stream())
+				.collect(Collectors.toList());
+	}
+
+	private List<Instant> getTimestampListFromEntityTemporal(EntityTemporalVO entityTemporalVO, TimeQuery timeQuery) {
+		List<Instant> timeStampList = new ArrayList<>();
+		timeStampList.addAll(Optional.ofNullable(entityTemporalVO.getObservationSpace())
+				.stream()
+				.flatMap(List::stream)
+				.map(geoPropertyVO -> getTimestampFromGeoProperty(geoPropertyVO, timeQuery.getTimeStampType()))
+				.collect(Collectors.toList()));
+		timeStampList.addAll(Optional.ofNullable(entityTemporalVO.getOperationSpace())
+				.stream()
+				.flatMap(List::stream)
+				.map(geoPropertyVO -> getTimestampFromGeoProperty(geoPropertyVO, timeQuery.getTimeStampType()))
+				.collect(Collectors.toList()));
+		timeStampList.addAll(Optional.ofNullable(entityTemporalVO.getLocation())
+				.stream()
+				.flatMap(List::stream)
+				.map(geoPropertyVO -> getTimestampFromGeoProperty(geoPropertyVO, timeQuery.getTimeStampType()))
+				.collect(Collectors.toList()));
+		timeStampList.addAll(Optional.ofNullable(entityTemporalVO.getAdditionalProperties())
+				.stream()
+				.map(Map::values)
+				.flatMap(Collection::stream)
+				.flatMap(instanceList -> ((List<Object>) instanceList).stream())
+				.map(propertyObject -> getTimestampFromPropertyObject(propertyObject, timeQuery.getTimeStampType()))
+				.collect(Collectors.toList()));
+		return timeStampList;
+	}
+
+	private Range getRange(List<Instant> timeStampList, TimeQuery timeQuery, Integer lastN) {
+		if (lastN != null) {
+			return getRangeWithLastN(timeStampList, timeQuery);
+		} else {
+			return getRangeWithoutLastN(timeStampList, timeQuery);
+		}
+	}
+
+	private Range getRangeWithoutLastN(List<Instant> timeStamps, TimeQuery timeQuery) {
+		TimeRelation timeRelation = Optional.ofNullable(timeQuery.getTimeRelation()).orElse(TimeRelation.BEFORE);
+		timeStamps.sort(Comparator.naturalOrder());
+
+		Instant startOfList = timeStamps.get(0);
+		Instant endOfList = timeStamps.get(timeStamps.size() - 1);
+
+		switch (timeRelation) {
+			case BEFORE:
+				return new Range(startOfList, endOfList);
+			case BETWEEN:
+			case AFTER:
+				return new Range(timeQuery.getTimeAt(), endOfList);
+			default:
+				throw new InvalidTimeRelationException(String.format("Received an invalid timerelation: %s", timeRelation));
+		}
+	}
+
+	private Range getRangeWithLastN(List<Instant> timeStamps, TimeQuery timeQuery) {
+		TimeRelation timeRelation = Optional.ofNullable(timeQuery.getTimeRelation()).orElse(TimeRelation.AFTER);
+		timeStamps.sort(Comparator.naturalOrder());
+
+		switch (timeRelation) {
+			case BETWEEN:
+				return new Range(timeQuery.getEndTime(), timeStamps.get(0));
+			case BEFORE:
+				return new Range(timeQuery.getTimeAt(), timeStamps.get(0));
+			case AFTER:
+				return new Range(timeStamps.get(timeStamps.size() - 1), timeStamps.get(0));
+			default:
+				throw new InvalidTimeRelationException(String.format("Received an invalid timerelation: %s", timeRelation));
+		}
+	}
+
+	private Instant getTimestampFromPropertyObject(Object propertyObject, TimeStampType timeStampType) {
+		if (propertyObject instanceof RelationshipVO) {
+			return getTimestampFromRelationShip((RelationshipVO) propertyObject, timeStampType);
+		} else if (propertyObject instanceof PropertyVO) {
+			return getTimestampFromProperty((PropertyVO) propertyObject, timeStampType);
+		} else if (propertyObject instanceof GeoPropertyVO) {
+			return getTimestampFromGeoProperty((GeoPropertyVO) propertyObject, timeStampType);
+		}
+		throw new PersistenceRetrievalException(String.format("The given propertyObject is not valid: %s", propertyObject));
+	}
+
+	private Instant getTimestampFromProperty(PropertyVO propertyVO, TimeStampType timeStampType) {
+		switch (timeStampType) {
+			case CREATED_AT:
+				return propertyVO.getCreatedAt();
+			case OBSERVED_AT:
+				return propertyVO.getObservedAt();
+			case MODIFIED_AT:
+			case TS:
+				return propertyVO.getModifiedAt();
+			default:
+				throw new InvalidTimeRelationException(String.format(TIMERELATION_ERROR_MSG_TEMPLATE, timeStampType));
+		}
+	}
+
+	private Instant getTimestampFromRelationShip(RelationshipVO relationshipVO, TimeStampType timeStampType) {
+		switch (timeStampType) {
+			case CREATED_AT:
+				return relationshipVO.getCreatedAt();
+			case OBSERVED_AT:
+				return relationshipVO.getObservedAt();
+			case MODIFIED_AT:
+			case TS:
+				return relationshipVO.getModifiedAt();
+			default:
+				throw new InvalidTimeRelationException(String.format(TIMERELATION_ERROR_MSG_TEMPLATE, timeStampType));
+		}
+	}
+
+	private Instant getTimestampFromGeoProperty(GeoPropertyVO geoPropertyVO, TimeStampType timeStampType) {
+		switch (timeStampType) {
+			case CREATED_AT:
+				return geoPropertyVO.getCreatedAt();
+			case OBSERVED_AT:
+				return geoPropertyVO.getObservedAt();
+			case MODIFIED_AT:
+			case TS:
+				return geoPropertyVO.getModifiedAt();
+			default:
+				throw new InvalidTimeRelationException(String.format("The given timestamp type is not supported: %s", timeStampType));
 		}
 	}
 
@@ -132,9 +354,17 @@ public class TemporalApiController implements TemporalRetrievalApi {
 	 * @return
 	 */
 	private List<String> getExpandedAttributes(List<URL> contextUrls, String attrs) {
-		return Optional.ofNullable(attrs)
-				.map(al -> contextCache.expandStrings(Arrays.asList(attrs.split(COMMA_SEPERATOR)), contextUrls))
-				.orElse(List.of());
+		if (attrs == null) {
+			return List.of();
+		}
+
+		return Arrays.stream(attrs.split(COMMA_SEPERATOR))
+				.map(attribute -> {
+					if (WELL_KNOWN_ATTRIBUTES.contains(attribute)) {
+						return attribute;
+					}
+					return contextCache.expandString(attribute, contextUrls);
+				}).collect(Collectors.toList());
 	}
 
 	private List<String> getExpandedTypes(List<URL> contextUrls, String types) {
@@ -166,6 +396,14 @@ public class TemporalApiController implements TemporalRetrievalApi {
 			return false;
 		}
 		return Arrays.asList(options.split(COMMA_SEPERATOR)).contains(TEMPORAL_VALUES_OPTION);
+	}
+
+	private boolean isCountOptionSet(String options) {
+		Optional<String> optionalOptions = Optional.ofNullable(options);
+		if (optionalOptions.isEmpty()) {
+			return false;
+		}
+		return Arrays.asList(options.split(COMMA_SEPERATOR)).contains(COUNT_OPTION);
 	}
 
 	private Optional<GeoQuery> getGeometryQuery(String georel, String geometry, String coordinates, String geoproperty) {
